# Commodity-Tick-Feed-Normalizer

./: CMakeLists.txt
docs/: onboarding.md
src/: Parser.cpp  Parser.h  Quote.h  main.cpp
test/: CMakeLists.txt  ParserTest.cpp
